--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
 <!--Home Page end-->
 
 <!--Covid policy start-->
-<section class="content6 cid-sEwlHHluPT py-5" id="content6-1" style="background-color: aliceblue; margin-top: 0px !important;">
+<section class="content6 cid-sEwlHHluPT py-5" id="covid" style="background-color: aliceblue; margin-top: 0px !important;">
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
@@ -36,7 +36,7 @@
 <!--Covid policy end-->
 
 <!--Smile makeover start-->
-<section class="content6 cid-sEwlHHluPT" id="content6-1" style="margin-top: 0px !important;">
+<section class="content6 cid-sEwlHHluPT" id="free-makeover" style="margin-top: 0px !important;">
     <div class="container-fluid my-5">
         <div class="row justify-content-center">
             <div class="col-auto col-lg-10">
@@ -82,14 +82,14 @@
             </div>
         </div>
         <div class="row d-flex justify-content-center mb-4">
-            <a class="btn btn-danger display-4 button-style" routerLink="/team" fragment="top">Learn More</a>
+            <a class="btn btn-danger display-4 button-style" routerLink="/team" fragment="top">Meet our doctors</a>
         </div>
     </div>
 </section>
 <!--About us end-->
 
 <!-- Why Choose Us Section Start-->
-<section class="features1 cid-sDoKqPFAJI" id="features1-5" >
+<section class="features1 cid-sDoKqPFAJI" id="features" style="padding-top: 2rem;padding-bottom: 2rem;">
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-lg-9">
@@ -143,7 +143,7 @@
 <!-- Service section end-->
 
 <!-- Smile transformation section start-->
-<section class="gallery5 mbr-gallery cid-sDqHlAVQ14" id="gallery5-i">
+<section class="gallery5 mbr-gallery cid-sDqHlAVQ14" id="smile-transformation" style="padding-top: 1rem; padding-bottom: 1rem;">
     <div class="container">
         <div class="mbr-section-head mb-5">
             <h3 class="mbr-section-title mbr-fonts-style align-center m-0 smile-heading">Our Smile Transformations</h3>
@@ -204,8 +204,15 @@
 <!-- Smile transformation section end-->
 
 <!--New Patient Experience start-->
-<section class="image2 cid-sExmPgvNL1" id="image2-4" style="background-color: aliceblue;">
+<section class="image2 cid-sExmPgvNL1" id="new-patient" style="background-color: aliceblue;">
     <div>
+        <div class="row d-flex justify-content-center">
+            <div class="col-11 col-md-5 col-lg-auto">
+                <h3 class="mbr-section-title text-choose-heading mt-3" >
+                    <strong>New Patient Experience</strong>
+                </h3>
+            </div>
+        </div>
         <div class="row justify-content-center text-white">
             <div class="col-11 col-lg-6 mt-3">
                 <div class="image-wrapper">
@@ -216,11 +223,9 @@
                 <div class="text-wrapper">
                     <div class="row justify-content-center ">
                         <div class="col-11 mt-3">
-                            <h3 class="mbr-section-title text-choose-heading mt-3" >
-                                <strong>New Patient Experience</strong>
-                            </h3>
+                            
                             <h5 class="mbr-section-title mb-3 my-3 choose-sub-heading">
-                                <strong>From the moment you step into our Dr. Smile, we’ll help you feel comfortable and at ease.</strong>
+                                <strong>From the moment you step into our dental office, we’ll help you feel comfortable and at ease.</strong>
                             </h5>
                             <p class="mbr-text choose-text-normal">
                                 Our friendly staff will explain what to expect, outline payment and financing options, and answer all your questions. We’ll listen to your health goals and concerns. Together we’ll outline a care plan completely personalized to your needs and smile goals.
@@ -237,11 +242,100 @@
     </div>
 </section>
 <!--New Patient Experience End-->
-
+<!--Patient Stories Start-->
+<section class="testimonails3 carousel slide testimonials-slider cid-sFXjfX9SKk" id="testimonials">
+    <div class="text-center container-fluid my-3">
+        <div class="row d-flex justify-content-center">
+            <div class="col-auto">
+                <h3 class="mb-3 mbr-fonts-style display-2 smile-heading">
+                    <strong>Patient Stories</strong>
+                </h3>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center">
+            <div class="col-auto">
+                <h3 class="choose-sub-heading">
+                    Real patients… Real results!<br>
+                    Read our patient testimonials and find out why Dr. Smile is a five star clinic.<br>
+                </h3>
+            </div>
+        </div>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="container-fluid">
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-auto">
+                                <img class="img-thumbnail img-responsive small-image-test" src="../../assets/images/team1.jpg" alt="First slide">
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-center mt-2">
+                            <div class="col-auto">
+                                <p class="choose-text-normal-small"><em>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."</em></p>
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-auto">
+                                <p class="choose-text-normal-small"><strong>Test Subject <br> Patient at Dr. Smile</strong></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="container-fluid">
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-auto">
+                                <img class="img-thumbnail img-responsive small-image-test" src="../../assets/images/team2.jpg" alt="Second slide">
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-center mt-2">
+                            <div class="col-auto">
+                                <p class="choose-text-normal-small"><em>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."</em></p>
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-auto">
+                                <p class="choose-text-normal-small"><strong>Test Subject <br> Patient at Dr. Smile</strong></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="container-fluid">
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-auto">
+                                <img class="img-thumbnail img-responsive small-image-test" src="../../assets/images/team3.jpg" alt="Third slide">
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-center mt-2">
+                            <div class="col-auto">
+                                <p class="choose-text-normal-small"><em>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."</em></p>
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-auto">
+                                <p class="choose-text-normal-small"><strong>Test Subject <br> Patient at Dr. Smile</strong></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev btn-color" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <i class="fas fa-chevron-left btn-color"></i>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next " href="#carouselExampleIndicators" role="button" data-slide="next">
+                <i class="fas fa-chevron-right btn-color"></i>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+</section>
+<!--Patient Stories End-->
 <!-- Insurance Start-->
-<section class="clients1 cid-sDqKnl8ZL7" id="clients1-j" style="background-color: white;">
+<section class="clients1 cid-sDqKnl8ZL7" id="insurance" style="background-color: aliceblue;padding-top:0.5rem;">
     
-    <div class="images-container container-fluid py-5">
+    <div class="images-container container-fluid pt-3">
         <div class="mbr-section-head">
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-2 text-choose-heading">
                 Insurance and Financing
@@ -282,7 +376,7 @@
 <!--Community Section Start-->
 <section class="community" id="community" style="background-color: aliceblue;">
     <div class="container-fluid">
-        <div class="row d-flex justify-content-center py-5">
+        <div class="row d-flex justify-content-center py-2">
            <div class="col-auto text-choose-heading">
                 Dr. Smile Supports Our Community
            </div>
@@ -293,7 +387,7 @@
                 <br>Call us at : <a href="tel:03325608387" style="color : #023E8A">03325608387</a><br>Our Website : <a href="www.sddm.ind.in" style="color : #023E8A">www.sddm.ind.in</a>
             </div>
          </div>
-         <div class="row d-flex justify-content-center">
+         <div class="row d-flex justify-content-center mb-3">
              <div class="col-11 col-md-3 col-lg-4 my-1 p-0">
                 <img src="../../assets/images/Screenshot 2021-08-11 030133.png" alt="" srcset="" height="500px" width="500px">
              </div>
@@ -306,7 +400,7 @@
 <!--Community Section end-->
 
 <!-- Form Start-->
-<section class="form2 cid-sDqFPtIYbA" id="form2-g" style="background-color: aliceblue;">
+<section class="form2 cid-sDqFPtIYbA" id="form2-g" style="background-color: white; padding-top: 1rem;">
     <div class="align-center container-fluid">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form">
