--- a/src/app/oral/oral.component.html
+++ b/src/app/oral/oral.component.html
@@ -1,5 +1,5 @@
-<section class="content16 cid-sDqF7mxvQH" id="content16-e" style="background-color: #fff;">
-    <div class="container-fluid py-5 my-5">
+<section class="content16 cid-sDqF7mxvQH" id="content16-e" style="background-color: white;padding-bottom:0rem;">
+    <div class="container-fluid my-3">
         <div class="row justify-content-center">
             <div class="col-12 col-md-11">
                 <div class="mbr-section-head align-center mb-4">
