--- a/src/app/ortho/ortho.component.html
+++ b/src/app/ortho/ortho.component.html
@@ -11,18 +11,33 @@
                 <strong>by Dr. Smile</strong>
             </div>
         </div>
+        <div class="row d-flex justify-content-center mb-3">
+            <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                <img src="../../assets/images/ortho gif.gif" alt="" class="image image-responsive small-img">
+            </div>
+        </div>
         <div class="row d-flex justify-content-center">
             <div class="col-auto col-12 px-5">
                 <p>
                     Orthodontic treatment is a way of straightening or moving teeth, to improve the appearance of the teeth and how they work.
                 </p>
-                <p class="heading-sub">
+                <p class="heading-sub-large">
                     When do you need orthodontic treatment?
                 </p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/ortho2.jfif" alt="" class="image image-responsive small-img">
+                    </div>
+                </div>
                 <p>
                     Your dentist might recommend it if you have crowded or crooked teeth. Orthodontic treatment will straighten the teeth or move them into a better position. This can improve their appearance and the way the teeth bite together, while also making them easier to clean. Some people have upper front teeth that stick out and look unsightly. These 'prominent' teeth are more likely to be damaged, but orthodontic treatment can move them back into line. When the teeth don't meet correctly, this can strain the jaw muscles, causing jaw and joint problems and sometimes headaches. Orthodontic treatment can help you.
                 </p>
-                <p class="heading-sub"> Steps to perform the procedure</p>
+                <p class="heading-sub-large"> Steps to perform the procedure</p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/ortho5.png" alt="" class="image image-responsive small-img">
+                    </div>
+                </div>
                 <ul>
                     <li class="text-point">
                         X-ray (OPG) of full mouth
@@ -40,8 +55,13 @@
                         Subsequent visits varies from case to case
                     </li>
                 </ul>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/ortho1.png" alt="" class="image image-responsive small-img-ortho">
+                    </div>
+                </div>
                 <p class="heading-sub-large">
-                    Frequently Asked Questions(FAQ)
+                    Frequently Asked Questions(FAQs)
                 </p>
                 <ol>
                     <li class="text-point">
@@ -85,6 +105,11 @@
                         </p>
                     </li>
                 </ol>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center mb-3">
+            <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                <img src="../../assets/images/ortho4.png" alt="" class="image image-responsive small-img-ortho">
             </div>
         </div>
     </div>
