--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -96,17 +96,41 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
-                    <strong>Links</strong>
+                    <strong>Quick Links</strong>
                 </h5>
                 <ul class="list mbr-fonts-style mb-4 lead">
                     <li class="mbr-text item-wrap">
-                        <!--a class="text-white small">Sitemap</a-->
+                        <a class="text-white small" href="https://form.jotform.com/212194400583046">Request an appointment</a>
                     </li>
                     <li class="mbr-text item-wrap">
-                        <!--a class="text-white small">Privacy and Policy</a-->
+                        <a class="text-white small" routerLink = "/" fragment="free-makeover">Free Smile Giveaway</a>
                     </li>
                     <li class="mbr-text item-wrap">
-                        <a class="text-info small">Developed by : <a href="https://suparno1998.github.io" target="_blank">Suparno Karmakar</a></a>
+                        <a class="text-white small" routerLink = "/team">Meet our team</a>
+                    </li>
+                    <li class="mbr-text item-wrap">
+                        <a class="text-white small" routerLink = "/" fragment="service-top">Services</a>
+                    </li>
+                    <li class="mbr-text item-wrap">
+                        <a class="text-white small" routerLink = "/" fragment="smile-transformation">Smile Transformation Gallery</a>
+                    </li>
+                    <li class="mbr-text item-wrap">
+                        <a class="text-white small" routerLink = "/" fragment="features">Patient Stories and Testimonials</a>
+                    </li>
+                    <li class="mbr-text item-wrap">
+                        <a class="text-white small" routerLink = "/" fragment="insurance">Insurance and financing</a>
+                    </li>
+                    <li class="mbr-text item-wrap">
+                        <a class="text-white small" (click)="openOffer()">Offers</a>
+                    </li>
+                    <li class="mbr-text item-wrap">
+                        <a class="text-white small" (click)="openMember()" >Memberships</a>
+                    </li>
+                    <li class="mbr-text item-wrap">
+                        <a class="text-white small" routerLink = "/" fragment="oral">Blog - Dental Advise by Dr. Smile</a>
+                    </li>
+                    <li class="mbr-text item-wrap">
+                        <a class="text-info small">Developed by : <a href="https://suparno1998.github.io">Suparno Karmakar</a></a>
                     </li>
                 </ul>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-5 display-7">
@@ -140,9 +164,7 @@
                         <a href="https://linkedin.com" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-linkedin socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255); font-size: 30px;"></span>
                         </a>
-                    </div>
-                    
-                    
+                    </div>     
                 </div>
             </div>
         </div>
