--- a/src/app/smoking/smoking.component.html
+++ b/src/app/smoking/smoking.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="row d-flex justify-content-center my-4">
             <div class="col-auto col-10 text-main">
-                Dental Advice by Dr. Smile | 20th August 2020
+                Dental Advice by Dr. Smile | 5 Sep 2020
             </div>
         </div>
         <div class="row d-flex justify-content-center">
