--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -62,19 +62,19 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 p-0 my-2 d-flex justify-content-center">
                 <div class="card pc-hide" style="width: 17rem;">
-                    <img src="../../assets/images/avatar.png" class="card-img-top mt-2 img-thumbnail mx-auto" alt="Dr. Smile" style="height:300px; width:240px;">
+                    <img src="../../assets/images/WhatsApp Image 2021-08-12 at 14.25.10.jpeg" class="card-img-top mt-2 img-thumbnail mx-auto" alt="Dr. Smile" style="height:300px; width:240px;">
                     <div class="card-body">
                         <h5 class="card-title"><strong>Dr. Budhaditya De</strong></h5>
                         <h6 class="card-subtitle mb-2 text-dark gap">BDS, MDS (Oral Pathology & Microbiology) [WBUHS]</h6>
                         <h6 class="card-subtitle mb-2 text-dark gap">Consultant Oral Cancer Specialist</h6>
-                        <h6 class="card-subtitle mb-2 text-dark gap">Reg No. : 4769-A-A</h6>
+                        <h6 class="card-subtitle mb-2 text-dark gap">Reg No. : 4769-A</h6>
                         <p class="card-text"><em>"Whoever said WINNING  isn't everything, obviously never had CANCER. <br> I help patients to beat it."</em></p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-3 p-0 my-2 d-flex justify-content-center">
                 <div class="card pc-hide" style="width: 17rem;">
-                    <img src="../../assets/images/avatar.png" class="card-img-top mt-2 img-thumbnail mx-auto" alt="Dr. Smile" style="height:300px; width:240px;">
+                    <img src="../../assets/images/sukanta-seal.jpeg" class="card-img-top mt-2 img-thumbnail mx-auto" alt="Dr. Smile" style="height:400px; width:240px;">
                     <div class="card-body">
                         <h5 class="card-title"><strong>Dr. Sukanta Seal</strong></h5>
                         <h6 class="card-subtitle mb-2 text-dark gap">BDS, MDS (Orthodontics and Dentofacial Othopaedics) [WBUHS]</h6>
@@ -86,7 +86,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 p-0 my-2 mx-2 d-flex justify-content-center">
                 <div class="card pc-hide" style="width: 17rem;">
-                    <img src="../../assets/images/avatar-girl.png" class="card-img-top mt-2 img-thumbnail mx-auto" alt="Dr. Smile" style="height:300px; width:240px;">
+                    <img src="../../assets/images/debarati.jpeg" class="card-img-top mt-2 img-thumbnail mx-auto" alt="Dr. Smile" style="height:300px; width:240px;">
                     <div class="card-body">
                         <h5 class="card-title"><strong>Dr. Debarati Deb</strong></h5>
                         <h6 class="card-subtitle mb-2 text-dark gap">BDS, MDS (Oral Medicine & Radiology) [WBUHS]</h6>
