--- a/src/styles.css
+++ b/src/styles.css
@@ -29,8 +29,12 @@ html,body {
    height: 300px;
    width: 400px;
 }
+.small-image-test{
+   max-width:400px;
+   max-height: 400px;
+}
 .small-img-crown{
-   height: 340px;
+   height: 400px;
    width: 400px;
 }
 .small-img-cosmo{
@@ -41,13 +45,25 @@ html,body {
    height: 340px;
    width: 400px;
 }
+.small-img-ortho{
+   height: 400px;
+   width: 400px;
+}
+.btn-color{
+   color : rgba(0,0,0,0.82);
+   font-size : 4rem;
+}
+.btn-color:hover{
+   color : rgba(0,0,0,0.3);
+   font-size : 4rem;
+}
 @media only screen and (max-width: 480px){
    .small-img{
       max-height: 200px;
       max-width: 300px;
    }
    .small-img-crown{
-      height: 200px;
+      height: 300px;
       width: 300px;
    }
    .small-img-cosmo{
@@ -57,5 +73,21 @@ html,body {
    .small-img-pedo{
       height: 350px;
       width: 300px;
+   }
+   .small-img-ortho{
+      height: 300px;
+      width: 300px;
+   }
+   .small-image-test{
+      max-width:200px;
+      max-height: 200px;
+   }
+   .btn-color{
+      color : rgba(0,0,0,0.82);
+      font-size : 2rem;
+   }
+   .btn-color:hover{
+      color : rgba(0,0,0,0.3);
+      font-size : 2rem;
    }
 }
