--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -157,8 +157,9 @@
                     </figure>
                     <figure slot="second" class="after">
                         <img width="100%" src="assets/images/after1.png">
-                    <figcaption>After</figcaption>
+                        <figcaption>After</figcaption>
                     </figure>                
+                    
                 </img-comparison-slider>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
@@ -171,6 +172,7 @@
                         <img width="100%" src="assets/images/after2.png">
                     <figcaption>After</figcaption>
                     </figure>                
+                    
                 </img-comparison-slider>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
@@ -183,6 +185,7 @@
                         <img width="100%" src="assets/images/after3.png">
                     <figcaption>After</figcaption>
                     </figure>                
+                    
                 </img-comparison-slider>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
@@ -195,9 +198,14 @@
                         <img width="100%" src="assets/images/after4.png">
                     <figcaption>After</figcaption>
                     </figure>                
+                    
                 </img-comparison-slider>
             </div>
-            
+        </div>
+        <div class="row d-flex justify-content-center">
+            <div class="col-auto">
+                <a routerLink="smiles" fragment="top" class="btn btn-danger display-4 button-style">See More</a>
+            </div>
         </div>
     </div>
 </section>
@@ -328,6 +336,14 @@
                 <i class="fas fa-chevron-right btn-color"></i>
                 <span class="sr-only">Next</span>
             </a>
+        </div>
+        <div class="row d-flex justify-content-end">
+            <div class="col-auto">
+                <a (click)="openFormModal()" class="deep-orange-light">Click here to submit your feedback</a>
+            </div>
+            <div class="col-auto">
+                <a routerLink="/review" fragment="top" class="deep-orange-light">View All Reviews</a>
+            </div>
         </div>
     </div>
 </section>
@@ -502,4 +518,53 @@
     </div>
 </div>
 <!--Offer modal end-->
-
+<!--Feedback Form Modal Start-->
+<div class="modal fade" id="feedbackformmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Feedback Form</h5>
+          <button type="button" class="close" (click)="closeFormModal()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <form class="form">
+                <div class="row d-flex justify-content-start">
+                    <div class="col-12 col-lg-4">
+                        <div class="form-group">
+                            <label for="rating">How was your experience ?</label>
+                            <ngb-rating [(rate)]="rating" class="form-control d-flex align-items-center" id="rating" style="font-size: 1.5rem;"></ngb-rating>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <div class="form-group">
+                            <label for="name">Your Name</label>
+                            <input type="text" name="name" id="name" class="form-control form-control-text" placeholder="Enter your name">
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <div class="form-group">
+                            <label for="date">Your Date Of Visit</label>
+                            <input type="date" name="date" id="date" class="form-control form-control-text">
+                        </div>
+                    </div>
+                </div>
+                <div class="row d-flex justify-content-start">
+                    <div class="col-auto" style="width: 100%;">
+                        <div class="form-group" >
+                            <label for="feedback">{{ rating >= 8 && rating >= 0? "What did we do good ? " : rating >= 5  && rating >= 0 ? "What would you like us to change for better service ? " :  rating > 0 ? "Where did we disappoint you, please tell us " : "Please give your feedback"}}</label>
+                            <textarea name="feedback" id="feedback" rows="5" class="form-control form-control-text"></textarea>
+                        </div>
+                    </div>
+                </div>
+                <div class="row d-flex justify-content-center">
+                    <button  type="submit" class="btn btn-danger display-4 button-style" (click)="submitFeedbackForm($event)">Submit your feedback</button>
+                </div>
+            </form>
+            
+        </div>
+      </div>
+    </div>
+</div>
+<!--Feedback Form Modal End-->
