--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- Navbar Start-->
-<div id="#top"></div>
+<div id="top-nav"></div>
 <section class="menu menu2 cid-sCaOWR0CfJ" once="menu" id="menu2-0">
     <div class="row d-flex justify-content-center bg-orange top-bar p-0 m-0">
         <div class="col-auto d-flex align-items-center p-0">
@@ -62,7 +62,7 @@
     </nav>
 </section>
 <!-- Navbar End-->
-<router-outlet (activate)="onActivate($event)"></router-outlet>
+<router-outlet></router-outlet>
 <!-- Footer Start-->
 <section class="footer6 cid-sDpCKlrKiV" once="footers" id="footer6-6">
     <div class="container">
