--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -47,7 +47,7 @@
         </div>
         <div class="row justify-content-center mb-3">
             <div class="col-auto">
-                <a class="btn btn-danger display-4 button-style" href="https://form.jotform.com/212216346337047" target="_blank">Learn More</a>
+                <a class="btn btn-danger display-4 button-style" href="https://form.jotform.com/212216346337047">Learn More</a>
             </div>
         </div>
     </div>
@@ -82,7 +82,7 @@
             </div>
         </div>
         <div class="row d-flex justify-content-center mb-4">
-            <a class="btn btn-danger display-4 button-style" routerLink="/team" fragment="top">Meet our doctors</a>
+            <a class="btn btn-danger display-4 button-style" routerLink="/team" fragment="top-nav">Meet our doctors</a>
         </div>
     </div>
 </section>
@@ -342,7 +342,7 @@
                 <a (click)="openFormModal()" class="deep-orange-light">Click here to submit your feedback</a>
             </div>
             <div class="col-auto">
-                <a routerLink="/review" fragment="top" class="deep-orange-light">View All Reviews</a>
+                <a class="deep-orange-light" routerLink="/review" fragment="top">View All Reviews</a>
             </div>
         </div>
     </div>
