--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -204,7 +204,7 @@
         </div>
         <div class="row d-flex justify-content-center">
             <div class="col-auto">
-                <a routerLink="smiles" fragment="top" class="btn btn-danger display-4 button-style">See More</a>
+                <a routerLink="/smiles" fragment="top" class="btn btn-danger display-4 button-style">See More</a>
             </div>
         </div>
     </div>
